[tool.poetry]
name = "delayed-env-wrapper"
version = "0.1.0"
description = "A wrapper to add execution delay to gymnasium/gymnax RL environments"
authors = ["Yann Berthelot <yannberthelot1@gmail.com>"]
readme = "README.md"
packages = [{include = "delayed_env_wrapper"}]

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.29.0"
gymnax = "^0.0.6"
numpy = "^1.25.1"
six = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
